# flux

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  README.md  docs.html  steps.txt  test.html  todo
.github/workflows/: android.yml  ci.yml  linux.yml  macos.yml  windows.yml
android/: AndroidManifest.xml  CmakeLists.txt  README.md  app.cpp  app.hpp  native-lib.cpp
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  flux_android_main.cpp
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: fluxConfig.cmake.in  web.cmake
config/: AppConfig.cmake  AppConfig.json
docs/: docs.html
examples/: CMakeLists.txt  audioplayer.cpp  cad.cpp  cameratest.cpp  canvas_paint.cpp  canvas_traingle.cpp  canvasimage.cpp  color_picker.cpp  component.cpp  counter.cpp  datatable.cpp  datepicker.cpp  draggable.cpp  filepicker.cpp  flextest.cpp  futurepost.cpp  futuretest.cpp  graphtest.cpp  grid.cpp  grid_example.cpp  gridlist.cpp  helloworld.cpp  httptest.cpp  icontest.cpp  illustrator.cpp  image_editor.cpp  imagecanvas2d.cpp  imagetest.cpp  inputtest.cpp  keyboardtest.cpp  layout.cpp  layouttest.cpp  lightroomapp.cpp  listview.cpp  logic_sim.cpp  login.cpp  main.cpp  memoryimage.cpp  menubarexample.cpp  mictest.cpp  (+23 more)
examples/android/: audioplayer.cpp  videoplayer.cpp
include/: flutter_ui.hpp  flux.hpp  flux_app.hpp  flux_checkbox.hpp  flux_component.hpp  flux_context_menu.hpp  flux_core.hpp  flux_core_impl.hpp  flux_dialog.hpp  flux_dropdown.hpp  flux_font.hpp  flux_gesturedetector.hpp  flux_gl_types.hpp  flux_graph.hpp  flux_grid.hpp  flux_image.hpp  flux_image_editor.hpp  flux_input.hpp  flux_layout.hpp  flux_layoutengine.hpp  flux_list_view.hpp  flux_overflow.hpp  flux_overlay_host.hpp  flux_progressbar.hpp  flux_radio.hpp  flux_renderer.hpp  flux_slider.hpp  flux_state.hpp  flux_switch.hpp  flux_text.hpp  flux_text_input.hpp  flux_toggle.hpp  flux_tooltip.hpp  flux_ui.hpp  flux_widget.hpp  flux_widget_list.hpp  flux_widgets.hpp  react_ui.h  reactui_minimal.h
include/flux/: dr_mp3.h  dr_wav.h  flux.hpp  flux_android_jni.hpp  flux_app.hpp  flux_audio.hpp  flux_camera.hpp  flux_canvas.hpp  flux_canvas2d.hpp  flux_canvas2d_backend.hpp  flux_canvas2d_d2d.hpp  flux_canvas_types.hpp  flux_component.hpp  flux_core.hpp  flux_d3d_device.hpp  flux_debug_log.hpp  flux_file.hpp  flux_file_picker_android.hpp  flux_file_picker_linux.hpp  flux_file_picker_win32.hpp  flux_font.hpp  flux_gesture.hpp  flux_gl.hpp  flux_glutil.hpp  flux_glyph_atlas_macos.hpp  flux_graphics_context.hpp  flux_http.hpp  flux_http_platform.hpp  flux_json.hpp  flux_keys.hpp  flux_layers.hpp  flux_layoutengine.hpp  flux_mic.hpp  flux_mic_controller.hpp  flux_navigator.hpp  flux_oes_blit.hpp  flux_overflow.hpp  flux_overlay_host.hpp  flux_overlay_manager.hpp  flux_painter.hpp  (+19 more)
include/flux/java/: FluxBridge.java
include/flux/widgets/: camera_widget.hpp  flux_accordion.hpp  flux_action.hpp  flux_audio_widget.hpp  flux_audioplayer.hpp  flux_canvas.hpp  flux_circular_progress.hpp  flux_collection.hpp  flux_colorpicker.hpp  flux_conditional.hpp  flux_data_table.hpp  flux_datepicker.hpp  flux_display.hpp  flux_file_picker.hpp  flux_flex.hpp  flux_flex_builder.hpp  flux_future_builder.hpp  flux_graph.hpp  flux_grid.hpp  flux_histogram.hpp  flux_hsl_panel.hpp  flux_icons.hpp  flux_image.hpp  flux_input.hpp  flux_input_extended.hpp  flux_keyboard.hpp  flux_layers.hpp  flux_layout.hpp  flux_menubar.hpp  flux_numberinput.hpp  flux_overlays.hpp  flux_padding.hpp  flux_page.hpp  flux_raster.hpp  flux_reactive_item.hpp  flux_sizedbox.hpp  flux_splitview.hpp  flux_stream_builder.hpp  flux_structure.hpp  flux_tabview.hpp  (+11 more)
include/widgets/: flux_action.hpp  flux_canvas.hpp  flux_collection.hpp  flux_colorpicker.hpp  flux_conditional.hpp  flux_display.hpp  flux_hsl_panel.hpp  flux_image_editor.hpp  flux_input.hpp  flux_layers.hpp  flux_layout.hpp  flux_overlays.hpp  flux_raster.hpp  flux_reactive_item.hpp  flux_structure.hpp  flux_tonecurve.hpp  flux_vector.hpp  flux_viewport.hpp  widgets.hpp
lib/: CMakeLists.txt  main.cpp
linux/: CMakeLists.txt  main.cpp
macos/: CMakeLists.txt  main.mm
scripts/: run-android.bat  run-linux.sh  run-macos.sh  run-web.bat  run-windows.bat
src/: alphatest.cpp  brushandselect.cpp  camera_widget_android.cpp  camera_widget_linux.cpp  camera_widget_macos.mm  camera_widget_web.cpp  camera_widget_win32.cpp  canvas_noviewport.cpp  canvas_paint.cpp  canvas_traingle.cpp  canvas_viewport.cpp  click.c  color_picker.cpp  component.cpp  counter.cpp  draggable.cpp  flux_android_jni.cpp  flux_android_main.cpp  flux_audio_android.cpp  flux_audio_impl.cpp  flux_audio_linux.cpp  flux_audio_web.cpp  flux_audio_win32.cpp  flux_camera_linux.cpp  flux_camera_macos.mm  flux_camera_win32.cpp  flux_canvas2d_gl.cpp  flux_canvas2d_nvg.cpp  flux_canvas2d_win32.cpp  flux_canvas_android.cpp  flux_canvas_linux.cpp  flux_canvas_macos.mm  flux_canvas_web.cpp  flux_canvas_win32.cpp  flux_core.cpp  flux_file_android.cpp  flux_file_linux.cpp  flux_file_picker_android.cpp  flux_file_picker_linux.cpp  flux_file_picker_macos.mm  (+63 more)
src/platform/android/: camera_widget_android.cpp  flux_audio_android.cpp  flux_camera_android.cpp  flux_canvas_android.cpp  flux_file_picker_android.cpp  flux_font_android.cpp  flux_image_android.cpp  flux_mic_android.cpp  flux_painter_android.cpp  flux_window_android.cpp
src/platform/linux/: camera_widget_linux.cpp  flux_audio_linux.cpp  flux_canvas2d_cairo.cpp  flux_canvas_linux.cpp  flux_file_picker_linux.cpp  flux_image_linux.cpp  flux_mic_linux.cpp  flux_painer_linux.cpp  flux_secure_storage_linux.cpp  flux_window_linux.cpp
src/platform/macos/: camera_widget_macos.mm  flux_audio_macos.mm  flux_camera_macos.mm  flux_canvas2d_metal.mm  flux_canvas_macos.mm  flux_file_picker_macos.mm  flux_font_macos.mm  flux_image_macos.mm  flux_mic_macos.mm  flux_overlay_manager_macos.mm  flux_painter_macos.mm  (+2 more)
test/: flex_example.c  old.c
web/: CMakeLists.txt  main.cpp  shell.html  shell.html.in
windows/: CMakeLists.txt  main.cpp
(+34 files in other folders)
